# cosmwasm-exam

./: README.md  init-localnet.sh
battleship-game/: Cargo.toml  code_ids.json  cw20_address.json  deploy.sh  init-cw20.json  init-cw20.sh
battleship-game/contracts/cw20-base/src/: contract.rs  lib.rs  state.rs
battleship-game/contracts/game/: Cargo.toml
battleship-game/contracts/game/src/: contract.rs  error.rs  integration_tests.rs  intergration_tests.rs  lib.rs  msg.rs  state.rs
battleship-game/src/: contract.rs  error.rs  intergration_tests.rs  lib.rs  msg.rs  state.rs
proof-generator/: code_ids.json  contract.json  game-config.json  go.mod  player1.json  player2.json
proof-generator/cmd/: cmd  main  main.go
proof-generator/internal/domain/: board.go  generator.go  merkletree.go
proof-generator/internal/game/: init.go  play.go
