[workspace]
members = [
  "contracts/game",
  "contracts/cw20-base"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
cosmwasm-std = "2.2.2"
cosmwasm-schema = "2.2.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "2.0.12"
semver = "1.0"
cw-multi-test = "2.3.2"